remove images folder

--- a/style.css
+++ b/style.css
@@ -73,7 +73,7 @@
   }
   
   #about-us {
-    background-image: url(/assets/images/background.jpg);
+    background-image: url(/images/background.jpg);
   }
   
   #footer {
