--- a/style.css
+++ b/style.css
@@ -41,7 +41,7 @@
     position: relative;
     overflow: hidden;
     margin: auto;
-    width: 75%;
+    width: 90%;
     padding-top: 56.25%; /* Aspect ratio: 16:9 */
     filter: drop-shadow(0px 0px 20px hsla(342, 57%, 40%, 0.199));
   }
@@ -83,7 +83,7 @@
     width: 150px;
   }
   
-  @media screen and (min-width: 1001px) {
+  @media screen and (min-width: 1201px) {
     nav {
       padding: 0 10em !important;
     }
@@ -100,5 +100,8 @@
     article p {
       width: 450px;
       margin: auto;
+    }
+    #venrif .trailer-container {
+      width: 75%;
     }
   }/*# sourceMappingURL=style.css.map */
